<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_consulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.ConsultaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll0_ins"
                android:layout_width="match_parent"
                android:layout_height="12sp"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pg_cons"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll0_ins"
                android:orientation="horizontal"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/spin_estado_ins"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:spinnerMode="dialog"
                    android:textSize="@dimen/fontSize" />

                <AutoCompleteTextView
                    android:id="@+id/auto_cidade_ins"
                    android:layout_width="227dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/auto_municipio" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll1_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_maxlb"
                    android:textColor="#000000"
                    android:textSize="@dimen/fontSize" />

                <EditText
                    android:id="@+id/max_clima_ins"
                    android:labelFor="@id/max_clima_ins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_left"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontSize"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll2_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_minlb"
                    android:textColor="#000000"
                    android:textSize="@dimen/fontSize" />

                <EditText
                    android:id="@+id/min_clima_ins"
                    android:labelFor="@id/min_clima_ins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_left"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll3_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_senslb"
                    android:textColor="#000000"
                    android:textSize="@dimen/fontSize" />

                <EditText
                    android:id="@+id/sens_clima_ins"
                    android:labelFor="@id/sens_clima_ins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_left"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll4_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_atual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_atuallb"
                    android:textColor="#000000"
                    android:textSize="@dimen/fontSize" />

                <EditText
                    android:id="@+id/atual_clima_ins"
                    android:labelFor="@id/atual_clima_ins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_left"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontSize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll6_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll5_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_umid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_umidadelb"
                    android:textColor="#000000"
                    android:textSize="@dimen/fontSize" />

                <EditText
                    android:id="@+id/umid_clima_ins"
                    android:labelFor="@id/umid_clima_ins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_left"
                    android:inputType="number"
                    android:maxLength="3"
                    android:layout_weight="1"
                    android:imeOptions="actionSend"
                    android:textSize="@dimen/fontSize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll7_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll6_ins"
                android:layout_marginTop="@dimen/space_margin"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_inserir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_inserir" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>
